Experimental libMultiChannelModel and iRoCS_GUI added

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(libBlitzFFTW)
 add_subdirectory(libArrayToolbox)
 add_subdirectory(libsegmentation)
 add_subdirectory(libIRoCS)
+add_subdirectory(libMultiChannelModel)
 add_subdirectory(tools)
 if (BUILD_SHARED_LIBS)
   add_subdirectory(libProgressReporter_qt4)
@@ -19,5 +20,6 @@ if (BUILD_SHARED_LIBS)
   add_subdirectory(liblabelling_qt4)
   add_subdirectory(labelling)
   add_subdirectory(L_T_C)
+  add_subdirectory(iRoCS_GUI)
   add_subdirectory(plugins)
 endif()
