--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(computeCellFeatures)
 add_subdirectory(assignLayersToSegmentation)
 add_subdirectory(detectSpheres)
 add_subdirectory(trainLayerAssignmentForSegmentation)
+add_subdirectory(hdf5)
