--- a/src/tools/assignLayersToSegmentation/Makefile.am
+++ b/src/tools/assignLayersToSegmentation/Makefile.am
@@ -15,11 +15,13 @@ assignLayersToSegmentation_LDADD = \
 	$(top_builddir)/src/libcmdline/libcmdline.la \
 	$(top_builddir)/src/lmbs2kit/liblmbs2kit.la
 
-if STATIC_TOOLS
-assignLayersToSegmentation_LDFLAGS = -all-static
-assignLayersToSegmentation_LDADD += $(HDF5_CPP_STATIC_LIBS) $(HDF5_STATIC_LIBS)
-else
+#if STATIC_TOOLS
+#assignLayersToSegmentation_LDFLAGS = -all-static
+#assignLayersToSegmentation_LDADD += \
+#	$(HDF5_CPP_STATIC_LIBS) $(HDF5_STATIC_LIBS) \
+#	$(ZLIB_STATIC_LIBS) $(SZIP_STATIC_LIBS)
+#else
 assignLayersToSegmentation_LDADD += $(HDF5_CPP_LIBS) $(HDF5_LIBS)
-endif
+#endif
 
 assignLayersToSegmentation_SOURCES = assignLayersToSegmentation.cc
