--- a/src/tools/attachIRoCS/Makefile.am
+++ b/src/tools/attachIRoCS/Makefile.am
@@ -17,7 +17,8 @@ attachIRoCS_LDADD = \
 
 if STATIC_TOOLS
 attachIRoCS_LDFLAGS = -all-static
-attachIRoCS_LDADD += $(HDF5_CPP_STATIC_LIBS) $(HDF5_STATIC_LIBS)
+attachIRoCS_LDADD += $(HDF5_CPP_STATIC_LIBS) $(HDF5_STATIC_LIBS) \
+	$(ZLIB_STATIC_LIBS) $(SZIP_STATIC_LIBS)
 else
 attachIRoCS_LDADD += $(HDF5_CPP_LIBS) $(HDF5_LIBS)
 endif
