--- a/src/tools/detectSpheres/Makefile.am
+++ b/src/tools/detectSpheres/Makefile.am
@@ -16,7 +16,8 @@ detectSpheres_LDADD = $(top_builddir)/src/libIRoCS/libIRoCS.la \
 
 if STATIC_TOOLS
 detectSpheres_LDFLAGS = -all-static
-detectSpheres_LDADD += $(HDF5_CPP_STATIC_LIBS) $(HDF5_STATIC_LIBS)
+detectSpheres_LDADD += $(HDF5_CPP_STATIC_LIBS) $(HDF5_STATIC_LIBS) \
+	$(ZLIB_STATIC_LIBS) $(SZIP_STATIC_LIBS)
 else
 detectSpheres_LDADD += $(HDF5_CPP_LIBS) $(HDF5_LIBS)
 endif
