--- a/src/tools/labelEpidermis/Makefile.am
+++ b/src/tools/labelEpidermis/Makefile.am
@@ -16,7 +16,8 @@ labelEpidermis_LDADD = $(top_builddir)/src/libIRoCS/libIRoCS.la \
 
 if STATIC_TOOLS
 labelEpidermis_LDFLAGS = -all-static
-labelEpidermis_LDADD += $(HDF5_CPP_STATIC_LIBS) $(HDF5_STATIC_LIBS)
+labelEpidermis_LDADD += $(HDF5_CPP_STATIC_LIBS) $(HDF5_STATIC_LIBS) \
+	$(ZLIB_STATIC_LIBS) $(SZIP_STATIC_LIBS)
 else
 labelEpidermis_LDADD += $(HDF5_CPP_LIBS) $(HDF5_LIBS)
 endif
