--- a/src/config.hh.in
+++ b/src/config.hh.in
@@ -21,6 +21,9 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
+/* Define to 1 if you have the `aec' library (-laec). */
+#undef HAVE_LIBAEC
+
 /* Define to 1 if you have the `blitz' library (-lblitz). */
 #undef HAVE_LIBBLITZ
 
@@ -59,6 +62,9 @@
 
 /* Define to 1 if you have the `m' library (-lm). */
 #undef HAVE_LIBM
+
+/* Define to 1 if you have the `opencv_core' library (-lopencv_core). */
+#undef HAVE_LIBOPENCV_CORE
 
 /* Define to 1 if you have the `opencv_imgproc' library (-lopencv_imgproc). */
 #undef HAVE_LIBOPENCV_IMGPROC
@@ -107,6 +113,9 @@
 
 /* Define to 1 if you have the `QtXml' library (-lQtXml). */
 #undef HAVE_LIBQTXML
+
+/* Define to 1 if you have the `sz' library (-lsz). */
+#undef HAVE_LIBSZ
 
 /* Define to 1 if you have the `tiff' library (-ltiff). */
 #undef HAVE_LIBTIFF
