--- a/src/tools/computeCellFeatures/Makefile.am
+++ b/src/tools/computeCellFeatures/Makefile.am
@@ -14,11 +14,13 @@ computeCellFeatures_LDADD = $(top_builddir)/src/libIRoCS/libIRoCS.la \
 	$(top_builddir)/src/libcmdline/libcmdline.la \
 	$(top_builddir)/src/lmbs2kit/liblmbs2kit.la
 
-if STATIC_TOOLS
-computeCellFeatures_LDFLAGS = -all-static
-computeCellFeatures_LDADD += $(HDF5_CPP_STATIC_LIBS) $(HDF5_STATIC_LIBS)
-else
+#if STATIC_TOOLS
+#computeCellFeatures_LDFLAGS = -all-static
+#computeCellFeatures_LDADD += $(HDF5_CPP_STATIC_LIBS) $(HDF5_STATIC_LIBS) \
+#	$(ZLIB_STATIC_LIBS) $(SZIP_STATIC_LIBS) \
+#	$(ZLIB_STATIC_LIBS) $(SZIP_STATIC_LIBS)
+#else
 computeCellFeatures_LDADD += $(HDF5_CPP_LIBS) $(HDF5_LIBS)
-endif
+#endif
 
 computeCellFeatures_SOURCES = computeCellFeatures.cc
