--- a/src/libArrayToolbox/Makefile.am
+++ b/src/libArrayToolbox/Makefile.am
@@ -59,6 +59,7 @@ arraytoolboxinclude_HEADERS = \
 	FastCorrelationFilter.hh FastCorrelationFilter.icc \
 	FastConvolutionFilter.hh FastConvolutionFilter.icc \
 	FastNormalizedCorrelationFilter.hh FastNormalizedCorrelationFilter.icc \
+	FastPhaseOnlyCorrelationFilter.hh FastPhaseOnlyCorrelationFilter.icc \
 	AnisotropicDiffusionFilter.hh AnisotropicDiffusionFilter.icc \
 	SurfaceGeometry.hh \
 	SparseVector.hh SparseVector.icc \
