FastNormalizedCorrelationFilter now implements CropBT

--- a/test/libArrayToolbox/CMakeLists.txt
+++ b/test/libArrayToolbox/CMakeLists.txt
@@ -9,3 +9,4 @@ endmacro()
 buildTest(testArray)
 buildTest(testATBLinAlg)
 buildTest(testLocalSumFilter)
+buildTest(testFastNormalizedCorrelationFilter)
