Added rotateDataset Tool

--- a/src/tools/hdf5/CMakeLists.txt
+++ b/src/tools/hdf5/CMakeLists.txt
@@ -9,7 +9,7 @@ macro(buildTool target)
     target_link_libraries(${target} PRIVATE ArrayToolbox_static cmdline_static)
   elseif (BUILD_SHARED_LIBS)
     target_link_libraries(${target} PRIVATE ArrayToolbox cmdline)
-  endif ()    
+  endif ()
   install(TARGETS ${target} RUNTIME DESTINATION bin)
 endmacro()
 
@@ -23,3 +23,4 @@ buildTool(setTransformationMatrix)
 buildTool(cropDataset)
 buildTool(cropAnnotationChannel)
 buildTool(scaleDataset)
+buildTool(rotateDataset)
