--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,8 +189,8 @@ if(BUILD_STATIC_TOOLS)
   set(GSL_STATIC_LIBRARIES ${GSL_STATIC_LIBRARY} ${GSL_CBLAS_STATIC_LIBRARY})
 
   # Build our own mini OpenCV to reduce dependencies to a minimum
-  set(OpenCV_URL "https://github.com/opencv/opencv/archive/2.4.13.2.zip")
-  set(OpenCV_URL_MD5 "e48803864e77fc8ae7114be4de732d80")
+  set(OpenCV_URL "https://github.com/opencv/opencv/archive/3.2.0.zip")
+  set(OpenCV_URL_MD5 "bfc6a261eb069b709bcfe7e363ef5899")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_DOCS:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_EXAMPLES:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_JASPER:BOOL=OFF")
@@ -202,35 +202,44 @@ if(BUILD_STATIC_TOOLS)
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_TBB:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_TESTS:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_TIFF:BOOL=OFF")
-  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_TINY_GPU_MODULE:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_WITH_DEBUG_INFO:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_ZLIB:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_apps:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_calib3d:BOOL=OFF")
-  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_contrib:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_core:BOOL=ON")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_cudaarithm:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_cudabgsegm:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_cudacodec:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_cudafeatures2d:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_cudafilters:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_cudaimgproc:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_cudalegacy:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_cudaobjdetect:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_cudaoptflow:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_cudastereo:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_cudawarping:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_cudev:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_features2d:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_flann:BOOL=OFF")
-  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_gpu:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_highgui:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_imgcodecs:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_imgproc:BOOL=ON")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_java:BOOL=OFF")
-  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_legacy:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_ml:BOOL=OFF")
-  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_nonfree:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_objdetect:BOOL=OFF")
-  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_ocl:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_photo:BOOL=OFF")
-  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_python:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_python2:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_python3:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_shape:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_stitching:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_superres:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_ts:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_video:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_videoio:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_videostab:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DBUILD_opencv_world:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DCMAKE_BUILD_TYPE:STRING=Release")
   list(APPEND OpenCV_CMAKE_ARGS "-DCMAKE_CONFIGURATION_TYPES:STRING=Release")
-  list(APPEND OpenCV_CMAKE_ARGS "-DCMAKE_VERBOSE:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_1394:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_CUBLAS:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_CUDA:BOOL=OFF")
@@ -238,13 +247,16 @@ if(BUILD_STATIC_TOOLS)
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_EIGEN:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_FFMPEG:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_GIGEAPI:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DWITH_GPHOTO2:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_GSTREAMER:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_GSTREAMER_0_10:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_GTK:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_IPP:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_JASPER:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_JPEG:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DWITH_LAPACK:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_LIBV4L:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DWITH_MATLAB:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_NVCUVID:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_OPENCL:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_OPENCLAMDBLAS:BOOL=OFF")
@@ -253,6 +265,7 @@ if(BUILD_STATIC_TOOLS)
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_OPENGL:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_OPENMP:BOOL=ON")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_OPENNI:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DWITH_OPENNI2:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_PNG:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_PVAPI:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_QT:BOOL=OFF")
@@ -261,6 +274,7 @@ if(BUILD_STATIC_TOOLS)
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_UNICAP:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_V4L:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_VTK:BOOL=OFF")
+  list(APPEND OpenCV_CMAKE_ARGS "-DWITH_WEBP:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_XIMEA:BOOL=OFF")
   list(APPEND OpenCV_CMAKE_ARGS "-DWITH_XINE:BOOL=OFF")
   ExternalProject_Add(
